Update session context proxy contract
